changed .row justify-content from space-between to space-around to fix alignment on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ a {
 .row {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: baseline;
   text-align: center;
 }
